# kiwi

./: .gitignore  BUILDING.md  CMakeLists.txt  README.md  build.bat  build.sh
dev/: build_and_run.sh  config.ini  header_template.txt  ref.txt  run.sh  todo.txt  visitor_pattern.cpp
dev/images/dlg_newmap/: graphic_gridtype_hexagonal_pointy_top.afdesign  graphic_gridtype_isometric_diamond.afdesign  graphic_gridtype_orthogonal.afdesign  graphic_maptype_hexagonal_type1_diamond.afdesign  graphic_maptype_hexagonal_type1_staggered.afdesign  graphic_maptype_hexagonal_type2_diamond.afdesign  graphic_maptype_hexagonal_type2_staggered.afdesign  graphic_maptype_isometric_staggered.afdesign  svg2code.py
manual/: README.md
res/: kiwi.rc  resource.h
src/: abstract_layer.cpp  abstract_layer.h  abstract_map.cpp  abstract_map.h  application.cpp  application.h  config.cpp  config.h  const.h  hexagonal_map.h  isometric_map.h  kiwi.h  orthogonal_map.cpp  orthogonal_map.h  util.cpp  util.h
src/gui/: dlg_about.cpp  dlg_about.h  dlg_game.cpp  dlg_game.h  dlg_layerproperties.cpp  dlg_layerproperties.h  dlg_newlayer.cpp  dlg_newlayer.h  dlg_newmap.cpp  dlg_newmap.h  dlg_settings.cpp  dlg_settings.h  frm_main.cpp  frm_main.h
src/res/: ini_resources.h  svg_resources.h  xpm_resources.h
src/res/xpm/: kiwi.xpm
util/: inject_config.py  update_versions.py
